# frictionless-geojson

./: CHANGELOG.md  LEAD.md  LICENSE.md  Makefile  Readme.md  pylama.ini  setup.cfg
.github/workflows/: main.yaml
data/: geo-faulty.geojson  geo.geojson  geo_wkt.csv
frictionless_geojson/: __init__.py
src/frictionless_geojson/: __init__.py
tests/: conftest.py  test_file.py  test_geojson.py  test_resource.py
