[metadata]
name = frictionless_geojson
version = 0.0.1
author = Thorben Westerhuys
author_email = thorben@cividi.ch
description = GeoJSON Parser and Dialect for Frictionless
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/cividi/frictionless-geojson
project_urls =
    Bug Tracker = https://github.com/cividi/frictionless-geojson/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = .
packages = find:
python_requires = >=3.6
install_requires =
    frictionless
    shapely
tests_require =
    black
    pytest
    pytest_cov
    pylama

[options.packages.find]
where = .