[metadata]
name = frictionless_geojson
version = 0.0.2
author = Thorben Westerhuys
author_email = thorben@cividi.ch
description = GeoJSON Parser and Dialect for Frictionless
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/cividi/frictionless-geojson
project_urls =
    Bug Tracker = https://github.com/cividi/frictionless-geojson/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = .
packages = find:
python_requires = >=3.6
install_requires =
    frictionless
    shapely

[options.packages.find]
where = .

[options.extras_require]
dev =
    frictionless[csv,json]
    black
    pytest
    pytest_cov
    pylama

[bdist_wheel]
universal=1